# Mezh-vuz_agentic_RAG

./: .gitignore  main.py  pyproject.toml  requirements.txt
config/: config.py
data/: programs.csv
data/processed/: knowledge_corpus.md  knowledge_corpus.txt
data/raw/: universities.csv
datasets/: knowledge_corpus.txt  programs.csv  universities.csv
src/RAG/: prepare_data.py
src/core/: config.py  data_loader.py  formatter.py
src/ingestion/: generate_knowledge_corpus_md.py  generate_knowledge_corpus_txt.py
src/rag/: agent.py  retriever.py  schema.py
