[project]
name = "mezh-vuz-agentic-rag"
version = "0.1.0"
description = "Agentic RAG для межвузовских данных"
requires-python = ">=3.10"
dependencies = [
    "pandas"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "flake8"
]